<resources>
    <string name="app_name">IncoflexMoveis</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="administra_o">administração</string>
    <string name="cat_logo">catálogo</string>
    <string name="contato">contato</string>
    <string name="desenvolvedor">desenvolvedor</string>
    <string name="encontre_nos">encontre-nos</string>
    <string name="sobre_a_empresa">sobre a empresa</string>
    <string name="title_activity_administracao">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
