<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context="incoflexmoveis.cursoandroid.com.incoflexmoveis.TelaInicial"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/admin"
        android:layout_width="115dp"
        android:layout_height="0dp"
        android:text="@string/administra_o"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/holo_red_light"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="27dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="27dp" />

    <TextView
        android:id="@+id/catalogo"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:text="@string/cat_logo"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/holo_red_light"
        android:textStyle="bold"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/encontreID"
        app:layout_constraintRight_toRightOf="@+id/encontreID"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="23dp"
        app:layout_constraintLeft_toLeftOf="@+id/encontreID" />

    <TextView
        android:id="@+id/contato"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:text="@string/contato"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/holo_red_light"
        android:textStyle="bold"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/adminID"
        app:layout_constraintRight_toRightOf="@+id/adminID"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="18dp"
        app:layout_constraintLeft_toLeftOf="@+id/adminID" />

    <TextView
        android:id="@+id/encontre"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/encontre_nos"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/holo_red_light"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/contato"
        app:layout_constraintLeft_toLeftOf="@+id/encontreID"
        app:layout_constraintRight_toRightOf="@+id/encontreID"
        app:layout_constraintTop_toBottomOf="@+id/encontreID"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/desenvol"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="22dp"
        android:text="@string/desenvolvedor"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/holo_red_light"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageButton
        android:id="@+id/empresaID"
        android:layout_width="0dp"
        android:layout_height="110dp"
        app:srcCompat="@drawable/sobre"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/contatoID"
        app:layout_constraintRight_toRightOf="@+id/contatoID"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="43dp"
        app:layout_constraintLeft_toLeftOf="@+id/contatoID" />

    <ImageButton
        android:id="@+id/catalogoID"
        android:layout_width="0dp"
        android:layout_height="110dp"
        app:layout_constraintBottom_toTopOf="@+id/catalogo"
        app:layout_constraintLeft_toLeftOf="@+id/catalogo"
        app:layout_constraintRight_toRightOf="@+id/catalogo"
        app:srcCompat="@drawable/catalogo"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <ImageButton
        android:id="@+id/desenvolvID"
        android:layout_width="0dp"
        android:layout_height="110dp"
        app:srcCompat="@drawable/desenvolvedor"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/desenvol"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/desenvol" />

    <ImageButton
        android:id="@+id/encontreID"
        android:layout_width="0dp"
        android:layout_height="110dp"
        app:srcCompat="@drawable/encontrenos"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/desenvolvID"
        app:layout_constraintRight_toRightOf="@+id/desenvolvID"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="38dp"
        app:layout_constraintLeft_toLeftOf="@+id/desenvolvID" />

    <ImageButton
        android:id="@+id/contatoID"
        android:layout_width="0dp"
        android:layout_height="110dp"
        app:srcCompat="@drawable/contato"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/contato"
        app:layout_constraintRight_toRightOf="@+id/contato"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/contato" />

    <ImageButton
        android:id="@+id/adminID"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:srcCompat="@drawable/admin"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/admin"
        app:layout_constraintRight_toRightOf="@+id/admin"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/admin"
        app:layout_constraintTop_toTopOf="@+id/desenvolvID" />

    <TextView
        android:id="@+id/empresa"
        android:layout_width="110dp"
        android:layout_height="35dp"
        android:text="@string/sobre_a_empresa"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/holo_red_light"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/catalogo"
        app:layout_constraintLeft_toLeftOf="@+id/empresaID"
        app:layout_constraintTop_toBottomOf="@+id/empresaID"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:scaleType="center"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_incoflex"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

</android.support.constraint.ConstraintLayout>
